--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,24 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nosifer&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,900&display=swap');
+
+/* CSS untuk menampilkan border dan opacity saat elemen dihover tanpa transisi */
+.nav {
+    box-sizing: border-box; /* Mempertahankan dimensi total elemen */
+  }
+
+.nav:hover {
+    border: 2px solid #872341; /* Tentukan lebar border yang diinginkan */
+    border-radius: 10px; /* Tentukan tingkat kebulatan pada border */ 
+    font: bold;
+    margin:10px;/* Atur padding agar panjang border tetap sama */
+  }
+  
+  /* Menghilangkan transisi untuk semua elemen yang dihover */
+  .nav:hover {
+    transition: none;
+  }
+  
