--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,7 +9,12 @@
         <title>NyokLapor</title>
     </head>
 
-    <body>
+    <body class="bg-section1 bg-opacity-5" >
+        <header>
+            <nav-bar></nav-bar>
+        </header>
+        <!-- ionicon -->
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     </body>
 
 </html>
