--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,11 +11,14 @@
 
 <body class="bg-section1 bg-opacity-5">
     <header>
-       <nav-bar></nav-bar>
-      </header>
+        <nav-bar></nav-bar>
+    </header>
     <main id="mainContent">
 
+
     </main>
+
+   <footer></footer>
     <!-- ionicon -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 </body>
