--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image" href="./assets/icons/nyoklapor-icon.png" />
-       
-        <title>NyokLapor</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image" href="./assets/icons/nyoklapor-icon.png" />
 
-    <body>
-    </body>
+    <title>NyokLapor</title>
+</head>
+
+<body class="bg-section1 bg-opacity-5">
+    <header>
+        <nav-bar></nav-bar>
+    </header>
+    <main id="mainContent">
+
+
+    </main>
+
+   <footer></footer>
+    <!-- ionicon -->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+</body>
 
 </html>
