--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image" href="./assets/icons/nyoklapor-icon.png" />
+    <link rel="icon" type="image" href="./assets/homepage/logo1.png" />
     
     <title>NyokLapor</title>
 </head>
