--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -25,8 +25,6 @@
 
 }
 
-
-
 .dashboard-cards {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -48,9 +46,7 @@
 #akunView,
 #totalLaporanView {
   display: flex;
-  /* Mengubah display menjadi flex untuk tampilan Akun */
   flex-direction: column;
-  /* Tampilkan child elements dalam satu kolom */
 }
 
 .akun-cards {
@@ -61,4 +57,66 @@
 
 .akun-card {
   width: 100%;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.9);
+  transition: opacity 0.3s ease-in-out;
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  max-width: 80%;
+  max-height: 80%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transition: max-width 0.3s ease-in-out, max-height 0.3s ease-in-out;
+}
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 30px;
+  color: #fff;
+  cursor: pointer;
+  transition: color 0.3s ease-in-out;
+}
+
+.close:hover {
+  color: #ff0000;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.pagination button {
+  background-color: #4caf50;
+  color: white;
+  border: 1px solid #4caf50;
+  padding: 8px 16px;
+  margin: 0 4px;
+  cursor: pointer;
+}
+
+.pagination button.active {
+  background-color: #45a049;
+}
+
+.pagination button:hover {
+  background-color: #45a049;
 }
