--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="dicoding:email" content="fadlirahmat0623@gmail.com">
     <link rel="icon" type="image" href="./assets/homepage/logo1.png" />
 
     <title>NyokLapor</title>
